# dummy_python_project

./: README.md  pyproject.toml
dummy_project/: config.py
